azure/security.tf
# Azure Network Security Groups

# Web Server Network Security Group
resource "azurerm_network_security_group" "web_nsg" {
  name                = "${var.project_name}-azure-web-nsg"
  location            = azurerm_resource_group.main.location
  resource_group_name = azurerm_resource_group.main.name
  
  security_rule {
    name                       = "HTTP"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  
  security_rule {
    name                       = "HTTPS"
    priority                   = 1002
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "443"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  
  tags = {
    Environment = var.environment
  }
}

# Application Server Network Security Group
resource "azurerm_network_security_group" "app_nsg" {
  name                = "${var.project_name}-azure-app-nsg"
  location            = azurerm_resource_group.main.location
  resource_group_name = azurerm_resource_group.main.name
  
  security_rule {
    name                       = "AppPorts"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_ranges    = ["8080-8084"]
    source_address_prefix      = "10.1.1.0/24"
    destination_address_prefix = "*"
  }
  
  tags = {
    Environment = var.environment
  }
}
